--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TechFix Pro - PC Repair Services</title>
+  <title>ZentroTech - PC Repair Services</title>
   <link rel="stylesheet" href="styles.css" />
   <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -97,3 +97,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
